<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/can_bg"
    android:padding="@dimen/fragment_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/avm_set"
            style="@style/car_info_style1"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/avm_intelligent"
                style="@style/car_info_style"/>
            <CheckBox
                android:id="@+id/t70_checkbox_set1"
                style="@style/car_set_checkbox"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/avm_first_forward_start"
                style="@style/car_info_style"/>
            <CheckBox
                android:id="@+id/t70_checkbox_set2"
                style="@style/car_set_checkbox"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/avm_start_log"
                style="@style/car_info_style"/>
            <CheckBox
                android:id="@+id/t70_checkbox_set3"
                style="@style/car_set_checkbox"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/avm_left_turn"
                style="@style/car_info_style"/>
            <CheckBox
                android:id="@+id/t70_checkbox_set5"
                style="@style/car_set_checkbox"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/avm_right_turn"
                style="@style/car_info_style"/>
            <CheckBox
                android:id="@+id/t70_checkbox_set6"
                style="@style/car_set_checkbox"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/avm_wheel_trigger"
                style="@style/car_info_style"/>
            <CheckBox
                android:id="@+id/t70_checkbox_set7"
                style="@style/car_set_checkbox"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/avm_forward_trigger"
                style="@style/car_info_style"/>
            <CheckBox
                android:id="@+id/t70_checkbox_set8"
                style="@style/car_set_checkbox"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/avm_reset"
                style="@style/car_info_style"/>
            <TextView
                android:id="@+id/t70_avm_reset"
                style="@style/car_set_right_style2"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
