<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/can_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/fuel_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:textSize="@dimen/tv_psa_trip_size"
                    android:gravity="center"
                    android:id="@+id/psa_tv_page0"
                    android:background="@drawable/choose_dialog_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_psa_page0"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:textSize="@dimen/tv_psa_trip_size"
                    android:gravity="center"
                    android:id="@+id/psa_tv_page1"
                    android:background="@drawable/choose_dialog_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_psa_page1"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:textSize="@dimen/tv_psa_trip_size"
                    android:gravity="center"
                    android:id="@+id/psa_tv_page2"
                    android:background="@drawable/choose_dialog_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_psa_page2"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:textSize="@dimen/tv_psa_trip_size"
                    android:gravity="center"
                    android:id="@+id/psa_tv_other"
                    android:background="@drawable/choose_dialog_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_psa_other"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/psa_ll_page0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dsp_psa_trip_heigth">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_marginLeft="@dimen/dps_psa_trip_left"
                    android:text="@string/str_psa_fuel_consumption"
                    style="@style/psa_trip_tv_style"/>
                <TextView
                    android:id="@+id/psa_tv_fuel_consumption"
                    android:layout_marginLeft="@dimen/dps_psa_trip_value_left"
                    style="@style/psa_trip_tv_style"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_marginLeft="@dimen/dps_psa_trip_left"
                    android:text="@string/str_psa_recharge_mileage"
                    style="@style/psa_trip_tv_style"/>
                <TextView
                    android:id="@+id/psa_tv_recharge_mileage"
                    android:layout_marginLeft="@dimen/dps_psa_trip_value_left"
                    style="@style/psa_trip_tv_style"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_marginLeft="@dimen/dps_psa_trip_left"
                    android:text="@string/str_psa_destination_miles"
                    style="@style/psa_trip_tv_style"/>
                <TextView
                    android:id="@+id/psa_tv_destination_miles"
                    android:layout_marginLeft="@dimen/dps_psa_trip_value_left"
                    style="@style/psa_trip_tv_style"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_marginLeft="@dimen/dps_psa_trip_left"
                    android:text="@string/str_psa_start_stop_timing"
                    style="@style/psa_trip_tv_style"/>
                <TextView
                    android:id="@+id/psa_tv_start_stop_timing"
                    android:layout_marginLeft="@dimen/dps_psa_trip_value_left"
                    style="@style/psa_trip_tv_style"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/psa_ll_page1"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dsp_psa_trip_heigth">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_marginLeft="@dimen/dps_psa_trip_left"
                    android:text="@string/str_psa_fuel_average"
                    style="@style/psa_trip_tv_style"/>
                <TextView
                    android:id="@+id/psa_tv_fuel_average"
                    android:layout_marginLeft="@dimen/dps_psa_trip_value_left"
                    style="@style/psa_trip_tv_style"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_marginLeft="@dimen/dps_psa_trip_left"
                    android:text="@string/str_psa_speed_average"
                    style="@style/psa_trip_tv_style"/>
                <TextView
                    android:id="@+id/psa_tv_speed_average"
                    android:layout_marginLeft="@dimen/dps_psa_trip_value_left"
                    style="@style/psa_trip_tv_style"/>
                <TextView
                    android:textSize="@dimen/tv_psa_trip_size"
                    android:gravity="center"
                    android:id="@+id/psa_tv_page_clear"
                    android:background="@drawable/choose_dialog_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/psa_trip_clear_padding"
                    android:text="@string/str_psa_page_clear"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_marginLeft="@dimen/dps_psa_trip_left"
                    android:text="@string/str_psa_accumulated_miles"
                    style="@style/psa_trip_tv_style"/>
                <TextView
                    android:id="@+id/psa_tv_accumulated_miles"
                    android:layout_marginLeft="@dimen/dps_psa_trip_value_left"
                    style="@style/psa_trip_tv_style"/>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
