<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/fuel_bg"
    android:paddingLeft="@dimen/tx_hisfuel_progress_width1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/tx_curfuel_size"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_dz7_serives_vehicleno"/>
        <TextView
            android:textSize="@dimen/tx_curfuel_size"
            android:textColor="@android:color/white"
            android:id="@+id/tx_dz7_services_vehivcenum"
            android:paddingLeft="@dimen/tx_curfuel_trip_padding1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/golf7_services_left">
        <TextView
            android:textSize="@dimen/tx_curfuel_size"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_dz7_serives_days"/>
        <TextView
            android:textSize="@dimen/tx_curfuel_size"
            android:textColor="@android:color/white"
            android:id="@+id/tx_dz7_services_day"
            android:paddingLeft="@dimen/tx_curfuel_trip_padding1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/golf7_services_left">
        <TextView
            android:textSize="@dimen/tx_curfuel_size"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_dz7_serives_volksdis"/>
        <TextView
            android:textSize="@dimen/tx_curfuel_size"
            android:textColor="@android:color/white"
            android:id="@+id/tx_dz7_services_distance"
            android:paddingLeft="@dimen/tx_curfuel_trip_padding1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/golf7_services_left">
        <TextView
            android:textSize="@dimen/tx_curfuel_size"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_dz7_serives_oilchangedays"/>
        <TextView
            android:textSize="@dimen/tx_curfuel_size"
            android:textColor="@android:color/white"
            android:id="@+id/tx_dz7_services_oilchangeday"
            android:paddingLeft="@dimen/tx_curfuel_trip_padding1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/golf7_services_left">
        <TextView
            android:textSize="@dimen/tx_curfuel_size"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_dz7_serives_oilchangedis"/>
        <TextView
            android:textSize="@dimen/tx_curfuel_size"
            android:textColor="@android:color/white"
            android:id="@+id/tx_dz7_services_oilchangedis"
            android:paddingLeft="@dimen/tx_curfuel_trip_padding1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
